replicateAplication/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: pre
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-deployment-app
  template:
    metadata:
      labels:
        app: nginx-deployment-app
    spec:
      containers:
      - image: nginx:1.14.2
        name: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
