replicateAplication/01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-svc
  namespace: pre
spec:
  ports:
  - name: plaintext
    port: 80
    targetPort: 80
  selector:
    app: nginx-deployment-app
